Initial commit - TarımPazar platform
- Next.js 16 App Router projesi
- Authentication sistemi (session-based)
- Kullanıcı rolleri (FARMER, WORKER, ENGINEER, BUSINESS, OPERATOR, SUPPLIER, ADMIN)
- Ürün ve iş ilanları sistemi
- Mesajlaşma sistemi
- Dashboard ve profil yönetimi
- Mobil uyumlu responsive tasarım
- SEO optimizasyonları (sitemap, robots.txt, metadata)
- Prisma ORM ile veritabanı yönetimi

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint",
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate deploy",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "check:production": "tsx scripts/prepare-for-production.ts",
+    "prepare:postgresql": "tsx scripts/prepare-postgresql.ts",
+    "switch:postgresql": "bash scripts/switch-to-postgresql.sh"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
