--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ yarn-error.log*
 next-env.d.ts
 
 /app/generated/prisma
+
+# database
+*.db
+*.db-journal
+/dev.db
+prisma/dev.db
+prisma/prisma/
+
+# uploads
+/public/uploads/*
+!/public/uploads/.gitkeep
