--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
+    "next-themes": "^0.4.6",
     "query-string": "^9.3.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
